Fix logo vertical alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,6 @@
 .navbar-brand .logo {
     height: 40px;
     width: 40px;
-    vertical-align: top;
     margin-right: 3px;
 }
 
